# Sports-Practice

./: app.py  database_core.py  pyproject.toml  sports.sql
templates/: index.html  layout.html  new_sport.html  new_team.html  sport_names.html  team_names.html
